# MT-Autograder

./: README.md  api.db  auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  req.txt  run_tests.py  schemas.py  seed.py  test_HW_1.py
TESTS/: test_HW_1.py
mt_autograder/: eval.py  mt.py  regex_output.py  test_main.py
templates/: all_users.html  assignment_info.html  change_password.html  change_password_first.html  change_role.html  class_info.html  class_list.html  create_ass.html  create_class.html  create_user.html  delete_ass.html  delete_class.html  delete_user.html  email_template.html  enroll.html  index.html  login.html  me.html  my_assignments.html  my_page.html  nav.html  show_ass_outcome.html  show_code.html  show_user_outcome.html  student_list.html
