[tool.poetry]
name = "mt-autograder"
version = "0.1.0"
description = ""
authors = ["janecvo <vojta.ggpe@gmail.com>"]
readme = "README.md"
packages = [{include = "mt_autograder"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
